--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -2,13 +2,19 @@
 //
 // Generate semantic grid columns with these mixins.
 
-@mixin make-container($gutter: $grid-gutter-width) {
-    margin-left: auto;
+@mixin make-container($gutters: $grid-gutter-widths) {
     margin-right: auto;
-    padding-left:  ($gutter / 2);
-    padding-right: ($gutter / 2);
+    margin-left: auto;
     @if not $enable-flex-full {
         @include clearfix();
+    }
+
+    @each $breakpoint in map-keys($gutters) {
+        @include media-breakpoint-up($breakpoint) {
+            $gutter: map-get($gutters, $breakpoint);
+            padding-right: ($gutter / 2);
+            padding-left: ($gutter / 2);
+        }
     }
 }
 
@@ -22,9 +28,14 @@
     }
 }
 
-@mixin make-row($gutter: $grid-gutter-width) {
-    margin-left:  ($gutter / -2);
-    margin-right: ($gutter / -2);
+@mixin make-row($gutters: $grid-gutter-widths) {
+    @each $breakpoint in map-keys($gutters) {
+        @include media-breakpoint-up($breakpoint) {
+            $gutter: map-get($gutters, $breakpoint);
+            margin-right: ($gutter / -2);
+            margin-left: ($gutter / -2);
+        }
+    }
 
     @if $enable-flex-opt {
         display: block;
@@ -129,8 +140,6 @@
                 flex-basis: 0;
                 flex-grow: 1;
                 max-width: 100%;
-                padding-right: ($gutter / 2);
-                padding-left:  ($gutter / 2);
             }
             @if $enable-flex-full {
                 .col-#{$breakpoint} {
