--- a/scss/core/_images.scss
+++ b/scss/core/_images.scss
@@ -6,7 +6,7 @@
 // which weren't expecting the images within themselves to be involuntarily resized.
 // See also https://github.com/twbs/bootstrap/issues/18178
 .img-responsive {
-    @include img-responsive();
+    @include img-responsive;
 }
 
 // Rounded corners
@@ -24,7 +24,7 @@
     @include box-shadow($thumbnail-box-shadow);
 
     // Keep them at most 100% wide
-    @include img-responsive(inline-block);
+    @include img-responsive;
 }
 
 // Perfect circle
