--- a/scss/mixins/_images.scss
+++ b/scss/mixins/_images.scss
@@ -7,10 +7,12 @@
 //
 // Keep images from scaling beyond the width of their parents.
 
-@mixin img-responsive($display: block) {
-    display: $display;
-    max-width: 100%;    // Set maximum to parent width
-    height: auto;       // Scale height without stretching
+@mixin img-responsive() {
+    // Set a maximum relative to the parent
+    max-width: 100%;
+    // Override the height to auto, otherwise images will be stretched
+    // when setting a width and height attribute on the img element.
+    height: auto;
 }
 
 
@@ -26,7 +28,7 @@
     // There's no such thing as unprefixed min-device-pixel-ratio since it's nonstandard.
     // Compatibility info: http://caniuse.com/#feat=css-media-resolution
     @media
-    only screen and (min-resolution: 192dpi), // IE9-11 don't support dppx
+    only screen and (min-resolution: 192dpi), // IE9-11 doesn't support dppx
     only screen and (min-resolution: 2dppx) { // Standardized
         background-image: url($file-2x);
         background-size: $width-1x $height-1x;
