--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -370,6 +370,7 @@ input[type="month"] {
 
         .input-group {
             display: inline-table;
+            width: auto;
             vertical-align: middle;
 
             .input-group-addon,
