--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -152,7 +152,7 @@
   background-color: #246;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .jumbotron-docs {
     padding: 1.5rem 0.75rem;
   }
@@ -269,7 +269,7 @@ h4 > code {
   border-top-left-radius: 0;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-example {
     padding: 1.5rem;
   }
@@ -484,7 +484,7 @@ h4 > code {
   margin-bottom: 0;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-footer {
     text-align: left;
   }
@@ -624,7 +624,7 @@ h4 > code {
   margin: -1rem -1rem 1rem;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-example .navbar-fixed-top {
     margin: -1.5rem -1.5rem 1rem;
   }
@@ -635,7 +635,7 @@ h4 > code {
   margin: 1rem -1rem -1rem;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-example .navbar-fixed-bottom {
     margin: 1rem -1.5rem -1.5rem;
   }
@@ -1050,6 +1050,24 @@ h4 > code {
   color: #999;
 }
 
+.language-bash::before {
+  color: #009;
+  content: "$ ";
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.language-powershell::before {
+  color: #009;
+  content: "PM> ";
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .table-responsive .highlight pre {
   white-space: normal;
 }
@@ -1111,13 +1129,13 @@ h4 > code {
   border: 1px solid #70b874;
 }
 
-@media (max-width: 33.9375em) {
+@media (max-width: 35.9375em) {
   .hidden-xs-only {
     display: none !important;
   }
 }
 
-@media (min-width: 34em) and (max-width: 47.9375em) {
+@media (min-width: 36em) and (max-width: 47.9375em) {
   .hidden-sm-only {
     display: none !important;
   }
