--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -21,9 +21,7 @@
             @include form-control-focus(darken($border-color, 20%));
         } @else {
             &:focus {
-                border-color: darken($border-color, 10%);
-                $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
-                @include box-shadow($shadow);
+                box-shadow: $input-box-shadow, 0 0 6px lighten($border-color, 20%);
             }
         }
     }
