--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -1,18 +1,11 @@
 // scss-lint:disable QualifyingElement
 
-// Base height calculation
-// Additional ones for each size and select
-
-// TODO: look at height calcs for select - still a bit off in IE 9 +
-$input-height:      (($font-size-base * $input-line-height) + ($input-padding-y * 2)) !default;
-$select-height:     calc(#{$input-height} + #{($border-width * 2)}) !default;
-
 // Textual form controls
 .form-control {
     display: block;
     width: 100%;
-    // // Make inputs at least the height of their button counterpart (base line-height + padding + border)
-    // height: $input-height;
+    // // Make inputs the height of their button counterpart (line-height + padding + border)
+    height: $select-height;
     padding: $input-padding-y ($input-padding-x / 2);
     font-size: $font-size-base;
     line-height: $input-line-height;
@@ -75,13 +68,15 @@ select.form-control {
     // Sizes
     @each $size, $dims in $component-sizes {
         $font-size:     map-get($dims, "font-size");
-        $padding-y:     map-get($dims, "padding-y");
+        $padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $font-size / 2);
+        $input-height-size:      (($font-size * $input-line-height) + ($padding-y * 2));
+        $select-height-size:     calc(#{$input-height-size} + #{($border-width * 2)});
 
         &.form-control-#{$size}:not([size]):not([multiple]),
         .input-group-#{$size} &.form-control:not([size]):not([multiple]) {
-            $input-height:      (($font-size * $input-line-height) + ($padding-y * 2));
-            $select-height:     calc(#{$input-height} + #{($border-width * 2)});
-            height: $select-height;
+            height: $select-height-size;
+            padding-top: $padding-y;
+            padding-bottom: $padding-y;
         }
     }
 
@@ -116,11 +111,14 @@ select.form-control {
 // Label sizes
 @each $size, $dims in $component-sizes {
     $font-size:     map-get($dims, "font-size");
-    $padding-y:     map-get($dims, "padding-y");
+    $padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $font-size / 2);
+    $input-height-size:      (($font-size * $input-line-height) + ($padding-y * 2));
+    $select-height-size:     calc(#{$input-height-size} + #{($border-width * 2)});
 
     .form-control-label-#{$size} {
-        padding-top: $input-padding-y;
-        padding-bottom: $input-padding-y;
+        height: $select-height-size;
+        padding-top: $padding-y;
+        padding-bottom: $padding-y;
         font-size:  $font-size;
     }
 }
@@ -158,12 +156,12 @@ input[type="month"] {
 
     @each $size, $dims in $component-sizes {
         $font-size:     map-get($dims, "font-size");
-        $padding-y:     map-get($dims, "padding-y");
+        $padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $font-size / 2);
+        $input-height-size: (($font-size * $input-line-height) + ($padding-y * 2));
 
         &.form-control-#{$size},
         .input-group-#{$size} &.form-control {
-            $input-height: (($font-size * $input-line-height) + ($padding-y * 2));
-            line-height: $input-height;
+            line-height: $input-height-size;
         }
     }
 }
@@ -199,11 +197,14 @@ input[type="month"] {
 // issue documented in https://github.com/twbs/bootstrap/issues/15074.
 @each $size, $dims in $component-sizes {
     $font-size:     map-get($dims, "font-size");
-    $padding-y:     map-get($dims, "padding-y");
+    $padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $font-size / 2);
     $padding-x:     map-get($dims, "padding-x");
     $border-radius: map-get($dims, "border-radius");
+    $input-height-size:      (($font-size * $input-line-height) + ($padding-y * 2));
+    $select-height-size:     calc(#{$input-height-size} + #{($border-width * 2)});
 
     .form-control-#{$size} {
+        height: $select-height-size;
         padding: $padding-y ($padding-x / 2);
         font-size: $font-size;
         @include border-radius($border-radius);
