--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -152,7 +152,7 @@
   background-color: #246;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .jumbotron-docs {
     padding: 1.5rem 0.75rem;
   }
@@ -269,7 +269,7 @@ h4 > code {
   border-top-left-radius: 0;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-example {
     padding: 1.5rem;
   }
@@ -484,7 +484,7 @@ h4 > code {
   margin-bottom: 0;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-footer {
     text-align: left;
   }
@@ -538,22 +538,6 @@ h4 > code {
 
 .cf-textalt div div {
   padding: .5rem 1rem;
-}
-
-.bg-light1 {
-  background-color: #ccc;
-}
-
-.bg-light2 {
-  background-color: #bbb;
-}
-
-.bg-dark1 {
-  background-color: #333;
-}
-
-.bg-dark2 {
-  background-color: #222;
 }
 
 .cf-example-container {
@@ -618,7 +602,8 @@ h4 > code {
   border: 1px solid rgba(34, 68, 102, 0.5);
 }
 
-.cf-example > .form-control + .form-control {
+.cf-example > .form-control + .form-control,
+.cf-example > .custom-select + .custom-select {
   margin-top: .5rem;
 }
 
@@ -640,7 +625,7 @@ h4 > code {
   margin: -1rem -1rem 1rem;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-example .navbar-fixed-top {
     margin: -1.5rem -1.5rem 1rem;
   }
@@ -651,7 +636,7 @@ h4 > code {
   margin: 1rem -1rem -1rem;
 }
 
-@media (min-width: 34em) {
+@media (min-width: 36em) {
   .cf-example .navbar-fixed-bottom {
     margin: 1rem -1.5rem -1.5rem;
   }
@@ -1066,6 +1051,24 @@ h4 > code {
   color: #999;
 }
 
+.language-bash::before {
+  color: #009;
+  content: "$ ";
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.language-powershell::before {
+  color: #009;
+  content: "PM> ";
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .table-responsive .highlight pre {
   white-space: normal;
 }
@@ -1127,13 +1130,13 @@ h4 > code {
   border: 1px solid #70b874;
 }
 
-@media (max-width: 33.9375em) {
+@media (max-width: 35.9375em) {
   .hidden-xs-only {
     display: none !important;
   }
 }
 
-@media (min-width: 34em) and (max-width: 47.9375em) {
+@media (min-width: 36em) and (max-width: 47.9375em) {
   .hidden-sm-only {
     display: none !important;
   }
@@ -1157,28 +1160,9 @@ h4 > code {
   }
 }
 
-.video-wrapper {
-  /* width: 600px; */
-}
-
-.video-transcript {
-  position: relative;
-}
-
-.video-transcript .video-wrapper {
-  width: 600px;
-}
-
-.video-transcript .player-scripttxt {
+.player-fulldisplay .player-scripttxt {
   position: absolute;
   top: 0;
-  left: 620px;
-  width: 350px;
-  height: 337px;
-  overflow: auto;
-}
-
-.video-transcript .player-fulldisplay .player-scripttxt {
   left: auto;
   right: 0;
   width: 25%;
