--- a/layout/grid/index.html
+++ b/layout/grid/index.html
@@ -27,7 +27,7 @@
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -317,13 +317,13 @@
         <th></th>
         <th class="text-xs-center">
           Extra small<br />
-          <small>&lt;544px</small><br />
-          <small>&lt;34em</small>
+          <small>&lt;576px</small><br />
+          <small>&lt;36em</small>
         </th>
         <th class="text-xs-center">
           Small<br />
-          <small>&ge;544px</small><br />
-          <small>&ge;34em</small>
+          <small>&ge;576px</small><br />
+          <small>&ge;36em</small>
         </th>
         <th class="text-xs-center">
           Medium<br />
@@ -349,9 +349,9 @@
         <td colspan="4">Collapsed to start, horizontal above breakpoints</td>
       </tr>
       <tr>
-        <th class="text-nowrap" scope="row">Container width</th>
+        <th class="text-nowrap" scope="row">Max container width</th>
         <td>None (auto)</td>
-        <td>576px (36rem)</td>
+        <td>544px (33.75rem)</td>
         <td>720px (45rem)</td>
         <td>960px (60rem)</td>
         <td>1152px (72rem)</td>
@@ -733,7 +733,7 @@
   <span class="o">//</span> <span class="n">Extra</span> <span class="n">small</span> <span class="n">screen</span> <span class="o">/</span> <span class="n">phone</span>
   <span class="n">xs</span><span class="o">:</span> <span class="m">0</span><span class="o">,</span>
   <span class="o">//</span> <span class="n">Small</span> <span class="n">screen</span> <span class="o">/</span> <span class="n">phone</span>
-  <span class="n">sm</span><span class="o">:</span> <span class="nf">bp-to-em</span><span class="p">(</span><span class="m">544px</span><span class="p">)</span><span class="o">,</span>
+  <span class="n">sm</span><span class="o">:</span> <span class="nf">bp-to-em</span><span class="p">(</span><span class="m">576px</span><span class="p">)</span><span class="o">,</span>
   <span class="o">//</span> <span class="n">Medium</span> <span class="n">screen</span> <span class="o">/</span> <span class="n">tablet</span>
   <span class="n">md</span><span class="o">:</span> <span class="nf">bp-to-em</span><span class="p">(</span><span class="m">768px</span><span class="p">)</span><span class="o">,</span>
   <span class="o">//</span> <span class="n">Large</span> <span class="n">screen</span> <span class="o">/</span> <span class="n">desktop</span>
@@ -743,7 +743,7 @@
 <span class="p">);</span>
 
 <span class="nv">$container-max-widths</span><span class="p">:</span> <span class="p">(</span>
-  <span class="n">sm</span><span class="o">:</span> <span class="nf">rem-calc</span><span class="p">(</span><span class="m">576px</span><span class="p">)</span><span class="o">,</span>
+  <span class="n">sm</span><span class="o">:</span> <span class="nf">rem-calc</span><span class="p">(</span><span class="m">544px</span><span class="p">)</span><span class="o">,</span>
   <span class="n">md</span><span class="o">:</span> <span class="nf">rem-calc</span><span class="p">(</span><span class="m">720px</span><span class="p">)</span><span class="o">,</span>
   <span class="n">lg</span><span class="o">:</span> <span class="nf">rem-calc</span><span class="p">(</span><span class="m">940px</span><span class="p">)</span><span class="o">,</span>
   <span class="n">xl</span><span class="o">:</span> <span class="nf">rem-calc</span><span class="p">(</span><span class="m">1140px</span><span class="p">)</span>
@@ -957,7 +957,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p>
-            Currently version: 1.2.0
+            Currently version: 1.3.0
             <br />
             <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
         </p>
