Docs: Add Twitter link to footer

--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -490,6 +490,29 @@ h4 > code {
   }
 }
 
+.footer-links {
+  padding-left: 0;
+  margin-bottom: 1rem;
+  list-style: none;
+}
+
+.footer-links::after {
+  display: block;
+  clear: both;
+  content: "";
+}
+
+.footer-links li {
+  float: left;
+}
+
+.footer-links li + li::before {
+  display: inline-block;
+  padding-right: .25rem;
+  padding-left: .25rem;
+  content: "-";
+}
+
 .footer-partners {
   margin-top: .25rem;
   text-align: left;
