--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,10 +1,11 @@
 <footer class="cf-footer">
     <div class="container">
-        <p>
-            Currently version: {{ site.current_version }}
-            <br />
-            <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
-        </p>
+        Currently version: {{ site.current_version }}
+        <ul class="footer-links">
+            <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
+            <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
+            <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
+        </ul>
         <p>
             &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
