--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -226,6 +226,9 @@ $font-family-base:          $font-family-sans-serif !default;
 $font-size-base:    1rem !default;
 $line-height-base:  1.5 !default;
 
+$font-weight-normal:    normal !default;
+$font-weight-bold:      bold !default;
+
 $font-size-h1:  2.5rem !default;
 $font-size-h2:  2rem !default;
 $font-size-h3:  1.75rem !default;
@@ -267,7 +270,7 @@ $blockquote-footer-color:       $uibase-400 !default;
 
 $list-inline-padding: .3em !default;
 
-$dt-font-weight:    bold !default;
+$dt-font-weight:    $font-weight-bold !default;
 
 // Component pieces
 // =====
@@ -281,12 +284,12 @@ $active-hover-bg:   darken($active-bg, 10) !default;
 $caret-width:           .325rem !default;
 
 $close-font-size:       ($font-size-base * 1.5) !default;
-$close-font-weight:     bold !default;
+$close-font-weight:     $font-weight-bold !default;
 $close-color:           #000 !default;
 $close-text-shadow:     0 .0625rem 0 #fff !default;
 
 $drag-font-size:        ($font-size-base * 1.5) !default;
-$drag-font-weight:      bold !default;
+$drag-font-weight:      $font-weight-bold !default;
 $drag-color:            #000 !default;
 $drag-text-shadow:      0 .0625rem 0 #fff !default;
 
@@ -348,7 +351,7 @@ $code-bg:                   $uibase-75 !default;
 $kbd-color:                 $uibase-50 !default;
 $kbd-bg:                    $uibase-900 !default;
 $kbd-box-shadow:            inset 0 -.1rem 0 rgba(0,0,0,.25) !default;
-$kbd-nested-font-weight:    bold !default;
+$kbd-nested-font-weight:    $font-weight-bold !default;
 $kbd-border-radius:         .2rem !default;
 
 $pre-bg:                    $uibase-50 !default;
@@ -392,7 +395,7 @@ $table-border-color:        $uibase-300 !default;
 $btn-padding-y:                 .375rem !default;
 $btn-padding-x:                 .75rem !default;
 $btn-line-height:               1.25 !default;
-$btn-font-weight:               normal !default;
+$btn-font-weight:               $font-weight-normal !default;
 $btn-box-shadow:                inset 0 .0625rem 0 rgba(255,255,255,.15);
 $btn-active-box-shadow:         inset 0 .2rem .3rem rgba(0,0,0,.125) !default;
 
@@ -633,7 +636,7 @@ $dropdown-item-padding-x:        1.25rem !default;
 $dropdown-item-padding-y:        .2rem !default;
 
 $dropdown-header-font-size:      .875rem !default;
-$dropdown-header-font-weight:    normal !default;
+$dropdown-header-font-weight:    $font-weight-normal !default;
 $dropdown-header-color:          $uibase-400 !default;
 
 $dropdown-caret-color:          $uibase-400 !default;
@@ -680,7 +683,7 @@ $navbar-item-padding-y:             .425rem !default;
 $navbar-brand-padding-y:            .25rem !default;
 $navbar-brand-margin-x:             1rem !default;
 $navbar-brand-font-size:            1.25rem !default;
-$navbar-brand-font-weight:          bold !default;
+$navbar-brand-font-weight:          $font-weight-bold !default;
 
 $navbar-divider-padding-y:          .425rem !default;
 
@@ -716,7 +719,7 @@ $tag-color:                 $white !default;
 $tag-bg:                    $uibase-400 !default;
 $tag-link-hover-color:      $white !default;
 $tag-font-size:             75% !default;
-$tag-font-weight:           bold !default;
+$tag-font-weight:           $font-weight-bold !default;
 $tag-padding-x:             .375em !default;
 $tag-padding-y:             .25em !default;
 $tag-border-radius:         .25em !default;
@@ -734,7 +737,7 @@ $tag-outline-link-hover-color:  $white !default;
 // =====
 $alert-padding:             1rem !default;
 $alert-border-radius:       $border-radius !default;
-$alert-link-font-weight:    bold !default;
+$alert-link-font-weight:    $font-weight-bold !default;
 $alert-border-width:        $border-width !default;
 
 
