--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -14,7 +14,7 @@ h6, .h6 {
 
     small,
     .small {
-        font-weight: normal;
+        font-weight: $font-weight-normal;
         line-height: 1;
         color: $headings-small-color;
     }
@@ -67,7 +67,7 @@ hr {
 small,
 .small {
     font-size: $small-font-size;
-    font-weight: normal;
+    font-weight: $font-weight-normal;
 }
 
 mark,
