Extend font-weight cusomization a bit more

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -228,6 +228,7 @@ $line-height-base:  1.5 !default;
 
 $font-weight-normal:    normal !default;
 $font-weight-bold:      bold !default;
+$font-weight-base:      $font-weight-normal !default;
 
 $font-size-h1:  2.5rem !default;
 $font-size-h2:  2rem !default;
