Update var name

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -924,5 +924,5 @@ $zindex-popover:           1025 !default; //1060 !default;
 $zindex-tooltip:           1030 !default; //1070 !default;
 $zindex-navbar-fixed:      1020 !default; //1030 !default;
 $zindex-navbar-sticky:     1020 !default; //1030 !default;
-$zindex-modal-bg:          1040 !default;
+$zindex-modal-backdrop:    1040 !default;
 $zindex-modal:             1050 !default;
