Forms-Custom Controls: calculate top position for indicators
Needed for when the indicator size is customized

--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -59,7 +59,7 @@
 // Generates a shadow element to create our makeshift checkbox/radio background.
 .custom-control-indicator {
     position: absolute;
-    top: .1875rem;
+    top: (($line-height-base - $custom-control-indicator-size) / 2);
     left: 0;
     display: block;
     width: $custom-control-indicator-size;
