--- a/scss/utilities/_visibility.scss
+++ b/scss/utilities/_visibility.scss
@@ -3,7 +3,7 @@
 // Visibility utilities
 
 .invisible {
-    visibility: hidden !important;
+    @include invisible();
 }
 
 // Responsive visibility utilities
