--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -17,6 +17,7 @@
 @import "mixins/text-emphasis";
 @import "mixins/text-hide";
 @import "mixins/text-truncate";
+@import "mixins/visibility";
 
 // Components
 @import "mixins/alert";
