--- a/layout/flexbox/index.html
+++ b/layout/flexbox/index.html
@@ -238,6 +238,7 @@
   <li><a href="/components/cards/#groups">Card Group</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/grid-lines/">Grid Lines</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/input-group/">Input Group</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
+  <li><a href="/components/list-group/">List Group</a>, which switches from <code class="highlighter-rouge">block</code>s to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/media-object/">Media Object</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/navs/">Navs</a>, which switches from <code class="highlighter-rouge">float</code>s to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/navbar/#navbar-group">Navbar Group</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
@@ -274,6 +275,7 @@
   <li><code class="highlighter-rouge">.card-group-flex</code></li>
   <li><code class="highlighter-rouge">.gridline-flex</code></li>
   <li><code class="highlighter-rouge">.input-group-flex</code></li>
+  <li><code class="highlighter-rouge">.list-group-flex</code></li>
   <li><code class="highlighter-rouge">.media-flex</code></li>
   <li><code class="highlighter-rouge">.nav-flex</code></li>
   <li><code class="highlighter-rouge">.navbar-group-flex</code></li>
@@ -316,11 +318,12 @@
 
     <footer class="cf-footer">
     <div class="container">
-        <p>
-            Currently version: 1.3.0
-            <br />
-            <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
-        </p>
+        Currently version: 1.3.1
+        <ul class="footer-links">
+            <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
+            <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
+            <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
+        </ul>
         <p>
             &copy; 2013-2016 <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
