--- a/layout/grid/index.html
+++ b/layout/grid/index.html
@@ -244,7 +244,12 @@
   <li><a href="#flexbox" id="markdown-toc-flexbox">Flexbox</a>    <ul>
       <li><a href="#opt-in-vs-full-mode" id="markdown-toc-opt-in-vs-full-mode">Opt-in vs Full Mode</a></li>
       <li><a href="#what-is-available" id="markdown-toc-what-is-available">What is Available</a></li>
-      <li><a href="#auto-layout-columns" id="markdown-toc-auto-layout-columns">Auto-Layout Columns</a></li>
+      <li><a href="#auto-layout-columns" id="markdown-toc-auto-layout-columns">Auto-Layout Columns</a>        <ul>
+          <li><a href="#equal-width-columns" id="markdown-toc-equal-width-columns">Equal Width Columns</a></li>
+          <li><a href="#controlled-width-column" id="markdown-toc-controlled-width-column">Controlled Width Column</a></li>
+          <li><a href="#variable-width-column" id="markdown-toc-variable-width-column">Variable Width Column</a></li>
+        </ul>
+      </li>
       <li><a href="#alignment" id="markdown-toc-alignment">Alignment</a></li>
     </ul>
   </li>
@@ -838,7 +843,13 @@
 
 <h3 id="auto-layout-columns">Auto-Layout Columns</h3>
 
-<p>When flexbox support is used/enabled, you can utilize breakpoint-specific column classes for equal-width columns. Add any number of <code class="highlighter-rouge">.col-{breakpoint}</code>s for each breakpoint you need. For example, here’s are two grid layouts that apply to every device and viewport possible.</p>
+<p>When flexbox support is used/enabled, you can utilize breakpoint-specific column classes to control column widths.</p>
+
+<h4 id="equal-width-columns">Equal Width Columns</h4>
+
+<p>Equal-width columns are easliy done by adding any number of <code class="highlighter-rouge">.col-{breakpoint}</code>s for each breakpoint you need and every column will be the same width.</p>
+
+<p>For example, here’s are two grid layouts that apply to every device and viewport possible.</p>
 
 <div class="cf-example-row">
 
@@ -886,7 +897,9 @@
 
 </div>
 
-<p>Auto-layout for flexbox grid columns also means you can set the width of one column and the others will automatically resize around it. You may use predefined grid classes (as shown below), grid mixins, or inline widths.</p>
+<h4 id="controlled-width-column">Controlled Width Column</h4>
+
+<p>You can also set the width of one column and the others will automatically resize around it. You may use predefined grid classes (as shown below), grid mixins, or inline widths.</p>
 
 <p>In the examples below, note that the other columns will resize no matter the width of the center column.</p>
 
@@ -942,6 +955,64 @@
 
 </div>
 
+<h4 id="variable-width-column">Variable Width Column</h4>
+
+<p>Using the <code class="highlighter-rouge">col-{breakpoint}-auto</code> classes, a column can size itself based on the natural width of its content. This can be handy when dealing with single line content like inputs, numbers, etc.  This, in conjunction with <a href="/utilities/flexbox/#horizontal-alignment">horizontal alignment</a> utility classes, is very useful for centering layouts with uneven column sizes as viewport width changes.</p>
+
+<div class="cf-example-row">
+
+<div class="cf-example" data-example-id="">
+<div class="container">
+    <div class="row row-flex flex-md-center">
+        <div class="col-xs col-lg-2">
+            1 of 3
+        </div>
+        <div class="col-xs-12 col-md-auto">
+            Variable width content
+        </div>
+        <div class="col-xs col-lg-2">
+            3 of 3
+        </div>
+    </div>
+    <div class="row row-flex">
+        <div class="col-xs">
+            1 of 3
+        </div>
+        <div class="col-xs-12 col-md-auto">
+            Variable width content
+        </div>
+        <div class="col-xs col-lg-2">
+            3 of 3
+        </div>
+    </div>
+</div>
+</div><div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"container"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row row-flex flex-md-center"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs col-lg-2"</span><span class="nt">&gt;</span>
+            1 of 3
+        <span class="nt">&lt;/div&gt;</span>
+        <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs-12 col-md-auto"</span><span class="nt">&gt;</span>
+            Variable width content
+        <span class="nt">&lt;/div&gt;</span>
+        <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs col-lg-2"</span><span class="nt">&gt;</span>
+            3 of 3
+        <span class="nt">&lt;/div&gt;</span>
+    <span class="nt">&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row row-flex"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs"</span><span class="nt">&gt;</span>
+            1 of 3
+        <span class="nt">&lt;/div&gt;</span>
+        <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs-12 col-md-auto"</span><span class="nt">&gt;</span>
+            Variable width content
+        <span class="nt">&lt;/div&gt;</span>
+        <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs col-lg-2"</span><span class="nt">&gt;</span>
+            3 of 3
+        <span class="nt">&lt;/div&gt;</span>
+    <span class="nt">&lt;/div&gt;</span>
+<span class="nt">&lt;/div&gt;</span></code></pre></div>
+
+ </div>
+
 <h3 id="alignment">Alignment</h3>
 
 <p>If you wish to have better control over your flexbox grid alignment, there are a handful of utility classes that might be helpful.  Information and examples can be found in the <a href="/utilities/flexbox/">Flexbox utilities page</a>.</p>
@@ -956,11 +1027,12 @@
 
     <footer class="cf-footer">
     <div class="container">
-        <p>
-            Currently version: 1.3.0
-            <br />
-            <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
-        </p>
+        Currently version: 1.3.1
+        <ul class="footer-links">
+            <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
+            <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
+            <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
+        </ul>
         <p>
             &copy; 2013-2016 <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
