--- a/layout/overview/index.html
+++ b/layout/overview/index.html
@@ -221,7 +221,8 @@
 
 <ul id="markdown-toc">
   <li><a href="#containers" id="markdown-toc-containers">Containers</a></li>
-  <li><a href="#responsive-breakpoints" id="markdown-toc-responsive-breakpoints">Responsive breakpoints</a></li>
+  <li><a href="#responsive-breakpoints" id="markdown-toc-responsive-breakpoints">Responsive Breakpoints</a></li>
+  <li><a href="#z-index" id="markdown-toc-z-index">Z-index</a></li>
 </ul>
 
 <h2 id="containers">Containers</h2>
@@ -258,7 +259,7 @@
   ...
 <span class="nt">&lt;/div&gt;</span></code></pre></figure>
 
-<h2 id="responsive-breakpoints">Responsive breakpoints</h2>
+<h2 id="responsive-breakpoints">Responsive Breakpoints</h2>
 
 <p>Since Figuration is developed to be mobile first, we use a handful of <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Media_queries">media queries</a> to create sensible breakpoints for our layouts and interfaces. These breakpoints are mostly based on minimum viewport widths and allow us to scale up elements as the viewport changes.</p>
 
@@ -369,6 +370,23 @@
 
 <figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="k">@include</span> <span class="nd">media-breakpoint-between</span><span class="p">(</span><span class="n">md</span><span class="o">,</span> <span class="n">lg</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span></code></pre></figure>
 
+<h2 id="z-index">Z-index</h2>
+
+<p>Several Figuration components utilize <code class="highlighter-rouge">z-index</code>, the CSS property that helps control layout by providing a third axis to arrange content. We utilize a default z-index scale in Figuration that’s been designed to properly layer navigation, tooltips and popovers, modals, and more.</p>
+
+<p>Customizing these values is most likely not needed, and we don’t recommened customizing the values.  However, if you change one, you will need to review and possibly update all of the other values.</p>
+
+<figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="nv">$zindex-dropdown-backdrop</span><span class="p">:</span>  <span class="m">990</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-navbar</span><span class="p">:</span>            <span class="m">1000</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-dropdown</span><span class="p">:</span>          <span class="m">1000</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-popover</span><span class="p">:</span>           <span class="m">1025</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-tooltip</span><span class="p">:</span>           <span class="m">1030</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-navbar-fixed</span><span class="p">:</span>      <span class="m">1020</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-navbar-sticky</span><span class="p">:</span>     <span class="m">1020</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-modal-backdrop</span><span class="p">:</span>    <span class="m">1040</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span>
+<span class="nv">$zindex-modal</span><span class="p">:</span>             <span class="m">1050</span> <span class="o">!</span><span class="nb">default</span><span class="p">;</span></code></pre></figure>
+
+<p>Background elements—like the backdrops that allow click-dismissing—tend to reside on a lower <code class="highlighter-rouge">z-index</code>s, while navigation and popovers utilize higher <code class="highlighter-rouge">z-index</code>s to ensure they overlay surrounding content.  Modals get a higher z-index so they are placed above popover/tooltip items, in the case that one or more of those items is held open.</p>
 
             </div>
         </div>
@@ -380,11 +398,12 @@
 
     <footer class="cf-footer">
     <div class="container">
-        <p>
-            Currently version: 1.3.0
-            <br />
-            <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
-        </p>
+        Currently version: 1.3.1
+        <ul class="footer-links">
+            <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
+            <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
+            <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
+        </ul>
         <p>
             &copy; 2013-2016 <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
