v2 - Utilities-Float: rename and responsive rework
Rename `.pull-*-left` and `.pull-*-right` utilities to `.float-*-left` and `.float-*-right` and implement the new breakpoint designator.

Additional `float-none()` mixin.

Update docs and tests with class name changes

--- a/scss/mixins/_float.scss
+++ b/scss/mixins/_float.scss
@@ -1,8 +1,11 @@
 // scss-lint:disable ImportantRule
 
-@mixin pull-left {
+@mixin float-left {
     float: left !important;
 }
-@mixin pull-right {
+@mixin float-right {
     float: right !important;
+}
+@mixin float-none {
+    float: none !important;
 }
