--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -3,7 +3,7 @@
         <nav>
             <a class="navbar-brand" href="{{ site.baseurl }}/">CAST Figuration</a>
             <div class="clearfix hidden-lg-up">
-                <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler btn btn-toggler float-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
@@ -30,7 +30,7 @@
                     <li class="nav-item {% if page.group == "about" %}active{% endif %}">
                         <a href="{{ site.baseurl }}/about/overview/" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item pull-lg-right">
+                    <li class="nav-item float-lg-right">
                         <a href="{{ site.repo }}" class="nav-link"><small>GitHub</small></a>
                     </li>
                 </ul>
