--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -2,8 +2,8 @@
 @import "utilities/clearfix";
 @import "utilities/display";
 @import "utilities/flex";
+@import "utilities/float";
 @import "utilities/gridline";
-@import "utilities/pulls";
 @import "utilities/screen-reader";
 @import "utilities/spacing";
 @import "utilities/text";
