--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -16,25 +16,31 @@
     margin-left:  auto !important;
 }
 
-@each $prop, $abbrev in (margin: margin, padding: padding) {
-    @each $size, $lengths in $spacers {
-        $length-x:   map-get($lengths, x);
-        $length-y:   map-get($lengths, y);
+@each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
 
-        .#{$abbrev}-a-#{$size} { #{$prop}:        $length-y $length-x !important; } // a = All sides
-        .#{$abbrev}-t-#{$size} { #{$prop}-top:    $length-y !important; }
-        .#{$abbrev}-r-#{$size} { #{$prop}-right:  $length-x !important; }
-        .#{$abbrev}-b-#{$size} { #{$prop}-bottom: $length-y !important; }
-        .#{$abbrev}-l-#{$size} { #{$prop}-left:   $length-x !important; }
+    @include media-breakpoint-up($breakpoint) {
+        @each $prop, $abbrev in (margin: margin, padding: padding) {
+            @each $size, $lengths in $spacers {
+                $length-x:   map-get($lengths, x);
+                $length-y:   map-get($lengths, y);
 
-        // Axes
-        .#{$abbrev}-x-#{$size} {
-            #{$prop}-right:  $length-x !important;
-            #{$prop}-left:   $length-x !important;
-        }
-        .#{$abbrev}-y-#{$size} {
-            #{$prop}-top:    $length-y !important;
-            #{$prop}-bottom: $length-y !important;
+                .#{$abbrev}#{$bprule}-a-#{$size} { #{$prop}:        $length-y $length-x !important; } // a = All sides
+                .#{$abbrev}#{$bprule}-t-#{$size} { #{$prop}-top:    $length-y !important; }
+                .#{$abbrev}#{$bprule}-r-#{$size} { #{$prop}-right:  $length-x !important; }
+                .#{$abbrev}#{$bprule}-b-#{$size} { #{$prop}-bottom: $length-y !important; }
+                .#{$abbrev}#{$bprule}-l-#{$size} { #{$prop}-left:   $length-x !important; }
+
+                // Axes
+                .#{$abbrev}#{$bprule}-x-#{$size} {
+                    #{$prop}-right:  $length-x !important;
+                    #{$prop}-left:   $length-x !important;
+                }
+                .#{$abbrev}#{$bprule}-y-#{$size} {
+                    #{$prop}-top:    $length-y !important;
+                    #{$prop}-bottom: $length-y !important;
+                }
+            }
         }
     }
 }
