v2 - Utility-Visibility: add .visible util

--- a/scss/utilities/_visibility.scss
+++ b/scss/utilities/_visibility.scss
@@ -1,12 +1,15 @@
 // scss-lint:disable ImportantRule
 
 // Visibility utilities
-
 .invisible {
     @include invisible();
 }
+.visible {
+    @include visible();
+}
 
-// Responsive visibility utilities
+
+// Hidden utilities
 @each $bp in map-keys($grid-breakpoints) {
     .hidden-#{$bp}-up {
         @include media-breakpoint-up($bp) {
