v2 - Layout-Grid: rework responsive naming
Upate docs, examples, and tests as well.

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -16,10 +16,10 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-3 cf-sidebar">
+            <div class="col-12 col-md-3 cf-sidebar">
                 {% include nav-sidebar.html %}
             </div>
-            <div class="col-xs-12 col-md-9 cf-content">
+            <div class="col-12 col-md-9 cf-content">
                 <h1 class="cf-title" id="content">
                     {{ page.title }}
                     {% if page.subtitle %}
