--- a/docs/assets/scss/_responsive-tests.scss
+++ b/docs/assets/scss/_responsive-tests.scss
@@ -33,7 +33,7 @@
 .responsive-utilities-test {
     margin-top: .25rem;
 }
-.responsive-utilities-test .col-xs-6 {
+.responsive-utilities-test .col-6 {
     margin-top: .5rem;
     margin-bottom: .5rem;
 }
@@ -48,7 +48,7 @@
 }
 .visible-on,
 .hidden-on {
-    .col-xs-6 {
+    .col-6 {
         > .not-visible {
             color: $uibase-500;
             border: 1px solid $uibase-300;
@@ -57,7 +57,7 @@
 }
 .visible-on,
 .hidden-on {
-    .col-xs-6 {
+    .col-6 {
         .visible {
             color: map-deep-get($context-themes, "success", "context-color");
             background-color: map-deep-get($context-themes, "success", "context-bg");
