v2 - Utility-Border Radius- kill .img-rounded and replace with .radius utility

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -22,7 +22,7 @@
                         <a href="{{ site.baseurl }}/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item {% if page.group == "utilities" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/utilities/clearfix/" class="nav-link">Utilities</a>
+                        <a href="{{ site.baseurl }}/utilities/borders/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item {% if page.group == "widgets" %}active{% endif %}">
                         <a href="{{ site.baseurl }}/widgets/overview/" class="nav-link">Widgets</a>
